base/vampi/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vampi
  namespace: vampi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vampi
  template:
    metadata:
      labels:
        app: vampi
    spec:
      containers:
        - name: vampi
          image: erev0s/vampi:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
