base/vampi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vampi
  namespace: vampi
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "30s"
    nginx.org/client-max-body-size: "1m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vampi.1broken.net
      secretName: vampi-tls
  rules:
    - host: vampi.1broken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vampi
                port:
                  number: 80
